# lisTUI

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
listui/: Cargo.toml  README.md
listui/src/: app.rs  main.rs  utils.rs  widgets.rs
listui/src/widgets/: list.rs  loading.rs  mod.rs  player.rs
listui_lib/: Cargo.toml  README.md
listui_lib/migrations/2023-03-02-220642_track/: down.sql  up.sql
listui_lib/migrations/2023-03-02-225713_playlist/: down.sql  up.sql
listui_lib/src/: api.rs  db.rs  downloader.rs  lib.rs  models.rs  player.rs  schema.rs
listui_lib/src/api/: invidious_api.rs  mod.rs  yt_api.rs
