[package]
name = "listui"
version = "0.1.2"
edition = "2021"
description = "A simple music player for the terminal, written in Rust. "
license = "GPL-3.0"
authors = ["gulis1"]
repository = "https://github.com/gulis1/lisTUI"
readme = "README.md"
categories = ["command-line-utilities", "multimedia", "multimedia::audio"]
keywords = ["music", "playlist", "music_player", "terminal", "youtube"]

[dependencies]
listui_lib = { path = "../listui_lib", version="0.1.0" }
tui = "0.19"
crossterm = "0.26.1"
dotenvy = "0.15"
once_cell = "1.17.1"
tokio = "1.26.0"
rand = "0.8.5"
dirs = "4.0.0"
argh = "0.1.10"
regex = "1"
lazy_static = "1.4.0"