[package]
name = "listui"
version = "0.2.3"
edition = "2021"
description = "A simple music player for the terminal, written in Rust. "
license = "GPL-3.0"
authors = ["gulis1"]
repository = "https://github.com/gulis1/lisTUI"
readme = "README.md"
categories = ["command-line-utilities", "multimedia", "multimedia::audio"]
keywords = ["music", "playlist", "music_player", "terminal", "youtube"]

[dependencies]
listui_lib = { path = "../listui_lib", version="0.2.0" }
ratatui = "0.23.0"
crossterm = "0.27.0"
dotenvy = "0.15"
once_cell = "1.17.1"
tokio = {version = "1.26.0", features = ["rt", "fs", "rt-multi-thread"]}
rand = "0.8.5"
dirs = "5.0.1"
argh = "0.1.10"
soloud = "1.0.2"
regex = "1"
lazy_static = "1.4.0"